Sugati/src/objects/Opportunity_Supplier__c.object
<CustomObject>
    <fields>
        <fullName>OS_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Supplier Guides</relationshipLabel>
        <relationshipName>Opportunity_Supplier_Guides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OS_Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Opportunity Supplier Guides</relationshipLabel>
        <relationshipName>Opportunity_Supplier_Guides</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OS_Your_Guide__c</fullName>
        <label>Your Guide</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Opportunity Supplier Guide</label>
    <nameField>
        <displayFormat>OSGN-{000000}</displayFormat>
        <label>Opportunity Supplier Guide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Supplier Guides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>